--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Files to ignore #
 data/ecoregion_flows_by_scenario_timestep_95ci.csv
 data/ecoregion_transitions_by_scenario_timestep_95ci.csv
+.Rproj.user
